Merged revisions 71949 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r71949 | martin.v.loewis | 2009-04-26 03:02:07 +0200 (So, 26 Apr 2009) | 10 lines

  Merged revisions 71947 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r71947 | martin.v.loewis | 2009-04-26 02:53:18 +0200 (So, 26 Apr 2009) | 3 lines

    Issue #4971: Fix titlecase for characters that are their own
    titlecase, but not their own uppercase.
  ........
................